Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -108,6 +108,37 @@
     ]
   },
   {
+    "title": "Hòa Minzy phấn khích được Thủ tướng khen \"Bắc Bling\", hỏi MV mấy triệu view",
+    "content": "Trong buổi đối thoại với 300 thanh niên Việt Nam, Thủ tướng Phạm Minh Chính đã khen ngợi MV \"Bắc Bling\" của ca sĩ Hòa Minzy, nhấn mạnh sự sáng tạo và sức hấp dẫn của sản phẩm này trong việc kết nối văn hóa dân tộc với hiện đại. Hòa Minzy rất phấn khích khi được khen và chia sẻ những khoảnh khắc với Thủ tướng trên mạng xã hội. MV \"Bắc Bling\" hiện đã đạt 86 triệu lượt xem trên YouTube và được đánh giá là điểm nhấn trong sự nghiệp của cô.",
+    "link": "https://dantri.com.vn/giai-tri/hoa-minzy-phan-khich-duoc-thu-tuong-khen-bac-bling-hoi-mv-may-trieu-view-20250325071945755.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Thủ tướng đã khen ngợi MV nào của Hòa Minzy?",
+    "answers": [
+      {
+        "text": "Bắc Bling",
+        "correct": true
+      },
+      {
+        "text": "Thị Mầu",
+        "correct": false
+      },
+      {
+        "text": "Không thể cùng nhau suốt kiếp",
+        "correct": false
+      },
+      {
+        "text": "Rời bỏ",
+        "correct": false
+      },
+      {
+        "text": "Làng quan họ quê tôi",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
     "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
     "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
@@ -1275,33 +1306,6 @@
     ]
   },
   {
-    "title": "Màu ráy tai thế nào là bình thường?",
-    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
-    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Màu ráy tai bình thường là gì?",
-    "answers": [
-      {
-        "text": "Vàng và hơi dính",
-        "correct": true
-      },
-      {
-        "text": "Trắng và khô",
-        "correct": false
-      },
-      {
-        "text": "Đen và có mùi",
-        "correct": false
-      },
-      {
-        "text": "Đỏ và lỏng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vợ cầu thủ Quang Hải sở hữu loạt túi hàng hiệu Hermès, Dior đắt giá",
     "content": "Vợ cầu thủ Quang Hải, Chu Thanh Huyền, nổi bật với bộ sưu tập túi xách hàng hiệu đến từ các thương hiệu nổi tiếng như Hermès và Dior. Cô là một doanh nhân thành công trong lĩnh vực mỹ phẩm trực tuyến và thường xuyên chia sẻ về cuộc sống xa hoa của mình trên mạng xã hội. Bộ sưu tập của cô bao gồm những mẫu túi đắt giá như Hermès Birkin, Hermès Picotin, và Mini Lady Dior, thể hiện gu thời trang tinh tế và đẳng cấp của một người phụ nữ hiện đại.",
     "link": "https://dantri.com.vn/giai-tri/vo-cau-thu-quang-hai-so-huu-loat-tui-hang-hieu-hermes-dior-dat-gia-20250323231704019.htm",
@@ -1324,6 +1328,33 @@
       },
       {
         "text": "Louis Vuitton và Versace",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Màu ráy tai thế nào là bình thường?",
+    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
+    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Màu ráy tai bình thường là gì?",
+    "answers": [
+      {
+        "text": "Vàng và hơi dính",
+        "correct": true
+      },
+      {
+        "text": "Trắng và khô",
+        "correct": false
+      },
+      {
+        "text": "Đen và có mùi",
+        "correct": false
+      },
+      {
+        "text": "Đỏ và lỏng",
         "correct": false
       }
     ]
@@ -1762,28 +1793,28 @@
     ]
   },
   {
-    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
-    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
-    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
-    "cat": "the-thao",
-    "positivity": 8,
+    "title": "Robinho làm gì trong năm đầu ngồi tù",
+    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
+    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
+    "cat": "phap-luat",
+    "positivity": 4,
     "importance": 7,
-    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
     "answers": [
       {
-        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
         "correct": true
       },
       {
-        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
         "correct": false
       },
       {
-        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
         "correct": false
       },
       {
-        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "text": "Anh ấy không làm gì cả.",
         "correct": false
       }
     ]
@@ -1847,60 +1878,6 @@
     ]
   },
   {
-    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
-    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
-    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
-    "cat": "giai-tri",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
-    "answers": [
-      {
-        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
-        "correct": true
-      },
-      {
-        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
-        "correct": false
-      },
-      {
-        "text": "Vì phim không đạt được rating cao.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh không hợp với vai diễn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Robinho làm gì trong năm đầu ngồi tù",
-    "content": "Robinho, cựu danh thủ bóng đá Brazil, đang thụ án 9 năm tù giam vì tội hiếp dâm tập thể. Trong năm đầu tiên ngồi tù, anh tập trung vào việc cải tạo để có thể được ân xá, tham gia các hoạt động như học sửa chữa đồ điện, chơi bóng và chăm sóc vườn. Robinho có mối quan hệ tốt với các tù nhân khác và chưa gặp vấn đề gì trong trại giam. Mặc dù phủ nhận tội ác, anh vẫn đang thi hành án tại nhà tù Tremembe ở São Paulo.",
-    "link": "https://vnexpress.net/robinho-lam-gi-trong-nam-dau-ngoi-tu-4865047.html",
-    "cat": "phap-luat",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Robinho đang làm gì trong năm đầu ngồi tù?",
-    "answers": [
-      {
-        "text": "Anh ấy đang nỗ lực cải tạo và tham gia các hoạt động học tập.",
-        "correct": true
-      },
-      {
-        "text": "Anh ấy chỉ chơi bóng và không tham gia hoạt động nào khác.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy đang tìm cách trốn khỏi tù.",
-        "correct": false
-      },
-      {
-        "text": "Anh ấy không làm gì cả.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Sức bật từ hệ sinh thái số liên ngành",
     "content": "Bài viết thảo luận về sự chuyển đổi số và tác động của nó đến nền kinh tế Việt Nam, đặc biệt là việc hình thành các hệ sinh thái số liên ngành. Với sự phát triển của công nghệ, người dân ngày càng dễ dàng tiếp cận các dịch vụ đa dạng thông qua các ứng dụng như MoMo, giúp kết nối nhiều lĩnh vực như tài chính, giáo dục và y tế. Các doanh nghiệp cũng có cơ hội gia tăng cạnh tranh và phát triển khi tham gia vào hệ sinh thái này, mặc dù việc xây dựng hệ sinh thái số đòi hỏi thời gian và đầu tư tận tâm.",
     "link": "https://tuoitre.vn/suc-bat-tu-he-sinh-thai-so-lien-nganh-20250324170243163.htm",
@@ -1923,6 +1900,60 @@
       },
       {
         "text": "Hệ sinh thái không ảnh hưởng đến nền kinh tế.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chạy bộ có phải môn thể thao cho người giàu?",
+    "content": "Chạy bộ là môn thể thao dễ tiếp cận nhưng đang ngày càng phổ biến hơn trong nhóm người có thu nhập cao. Nghiên cứu cho thấy có mối liên hệ giữa thu nhập cao và tỷ lệ tham gia chạy bộ, với những người này thường có điều kiện tốt hơn để tập luyện và tham gia các giải đấu. Chạy bộ không chỉ mang lại lợi ích sức khỏe mà còn giúp xả stress và tạo kết nối cộng đồng, mặc dù không phải là môn thể thao dành riêng cho người giàu, nhưng nhóm này có xu hướng duy trì thói quen chạy bộ hơn.",
+    "link": "https://vnexpress.net/chay-bo-co-phai-mon-the-thao-cho-nguoi-giau-4865003.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chạy bộ có phải là môn thể thao dành cho người giàu không?",
+    "answers": [
+      {
+        "text": "Không hẳn, nhưng người giàu có xu hướng chạy bộ nhiều hơn.",
+        "correct": true
+      },
+      {
+        "text": "Chắc chắn là môn thể thao chỉ dành cho người giàu.",
+        "correct": false
+      },
+      {
+        "text": "Chạy bộ chỉ phù hợp với người có thời gian rảnh.",
+        "correct": false
+      },
+      {
+        "text": "Môn này không yêu cầu thiết bị nên ai cũng có thể chơi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Khán giả buồn vì \"anh chồng làng chài\" Park Bo Gum ít đất diễn, NSX nói gì?",
+    "content": "Bộ phim truyền hình \"Khi cuộc đời cho bạn quả quýt\" đang gây sốt tại Hàn Quốc và nhiều quốc gia, với sự tham gia của Park Bo Gum và IU. Tuy nhiên, khán giả đang phàn nàn về việc Park Bo Gum ít xuất hiện trong nửa sau của phim, mặc dù anh là nhân vật chính. Đại diện Netflix cho biết nội dung phim sẽ mở rộng hơn ở phần 4, hứa hẹn sẽ mang đến nhiều cảm xúc cho khán giả và Park Bo Gum sẽ có nhiều đất diễn hơn.",
+    "link": "https://dantri.com.vn/giai-tri/khan-gia-buon-vi-anh-chong-lang-chai-park-bo-gum-it-dat-dien-nsx-noi-gi-20250324123845357.htm",
+    "cat": "giai-tri",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao khán giả lại thất vọng về Park Bo Gum trong bộ phim \"Khi cuộc đời cho bạn quả quýt\"?",
+    "answers": [
+      {
+        "text": "Vì anh ít đất diễn trong nửa sau của phim.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh không có mặt trong toàn bộ bộ phim.",
+        "correct": false
+      },
+      {
+        "text": "Vì phim không đạt được rating cao.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh không hợp với vai diễn.",
         "correct": false
       }
     ]
