Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -587,6 +587,33 @@
     ]
   },
   {
+    "title": "Dấu hiệu nhận biết nốt ruồi có nguy cơ ung thư",
+    "content": "Nốt ruồi có thể là dấu hiệu cảnh báo ung thư da, đặc biệt là u hắc tố ác tính. Những dấu hiệu cần lưu ý bao gồm sự bất đối xứng, bờ không đều, màu sắc bất thường và đường kính lớn hơn 6 mm. Nếu nốt ruồi biến đổi theo thời gian hoặc có triệu chứng như ngứa, đau, cần thăm khám bác sĩ ngay. Để phòng ngừa, nên tránh nắng gắt và kiểm tra da thường xuyên.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-not-ruoi-co-nguy-co-ung-thu-4865300.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Làm thế nào để nhận biết nốt ruồi có nguy cơ ung thư?",
+    "answers": [
+      {
+        "text": "Nốt ruồi bất đối xứng và có màu sắc khác nhau.",
+        "correct": true
+      },
+      {
+        "text": "Nốt ruồi có màu nâu đồng nhất.",
+        "correct": false
+      },
+      {
+        "text": "Nốt ruồi nhỏ hơn 6 mm và tròn đều.",
+        "correct": false
+      },
+      {
+        "text": "Nốt ruồi không thay đổi theo thời gian.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Sống - làm việc - giải trí đa thế hệ tại công viên xanh rộng lớn ở miền Trung",
     "content": "Công viên Eco Central Park ở miền Trung Việt Nam là khu đô thị lớn với diện tích gần 200ha, cung cấp không gian sống, làm việc và giải trí cho cư dân đa thế hệ. Dự án chú trọng vào việc phát triển không gian xanh và tiện ích đa dạng, bao gồm trường học, không gian làm việc chung và khu thể thao, nhằm tạo ra một môi trường sống lành mạnh và tiện nghi. Với nhiều cây xanh và mặt nước, Eco Central Park hứa hẹn trở thành trung tâm văn hóa, giải trí mới tại Nghệ An.",
     "link": "https://tuoitre.vn/song-lam-viec-giai-tri-da-the-he-tai-cong-vien-xanh-rong-lon-o-mien-trung-20250324160729873.htm",
@@ -962,28 +989,32 @@
     ]
   },
   {
-    "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
-    "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
-    "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
-    "cat": "gia-dinh",
-    "positivity": 9,
+    "title": "Vườn hoa Lý Thái Tổ trước ngày cải tạo",
+    "content": "Vườn hoa Lý Thái Tổ tại Hà Nội sẽ được cải tạo từ tháng 4 đến tháng 10 năm 2025 nhằm nâng cao cảnh quan và công năng sử dụng. Dự án bao gồm việc mở rộng sân Khánh tiết, lắp đặt Km0, và cải tạo cảnh quan cây xanh với nguyên tắc giữ lại các cây cổ thụ có giá trị. Sau khi cải tạo, tổng số cây bóng mát tại vườn sẽ tăng lên 114 cây, đồng thời sẽ có các hệ thống phun nước âm sàn để cải thiện khí hậu khu vực.",
+    "link": "https://vnexpress.net/vuon-hoa-ly-thai-to-truoc-ngay-cai-tao-4865208.html",
+    "cat": "thoi-su",
+    "positivity": 8,
     "importance": 7,
-    "question": "Lễ cưới của Lê Hồng Phước được trang trí bằng gì?",
+    "question": "Vườn hoa Lý Thái Tổ sẽ được cải tạo vào thời gian nào?",
     "answers": [
       {
-        "text": "400 chiếc bánh đặc sản và rau củ quả",
+        "text": "Từ tháng 4 đến tháng 10 năm 2025",
         "correct": true
       },
       {
-        "text": "1000 chiếc bánh mì",
+        "text": "Từ tháng 1 đến tháng 6 năm 2025",
         "correct": false
       },
       {
-        "text": "500 hoa tươi",
+        "text": "Từ tháng 7 đến tháng 12 năm 2025",
         "correct": false
       },
       {
-        "text": "300 chai rượu",
+        "text": "Từ tháng 3 đến tháng 9 năm 2024",
+        "correct": false
+      },
+      {
+        "text": "Từ tháng 5 đến tháng 10 năm 2023",
         "correct": false
       }
     ]
@@ -1043,37 +1074,6 @@
     ]
   },
   {
-    "title": "Vườn hoa Lý Thái Tổ trước ngày cải tạo",
-    "content": "Vườn hoa Lý Thái Tổ tại Hà Nội sẽ được cải tạo từ tháng 4 đến tháng 10 năm 2025 nhằm nâng cao cảnh quan và công năng sử dụng. Dự án bao gồm việc mở rộng sân Khánh tiết, lắp đặt Km0, và cải tạo cảnh quan cây xanh với nguyên tắc giữ lại các cây cổ thụ có giá trị. Sau khi cải tạo, tổng số cây bóng mát tại vườn sẽ tăng lên 114 cây, đồng thời sẽ có các hệ thống phun nước âm sàn để cải thiện khí hậu khu vực.",
-    "link": "https://vnexpress.net/vuon-hoa-ly-thai-to-truoc-ngay-cai-tao-4865208.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Vườn hoa Lý Thái Tổ sẽ được cải tạo vào thời gian nào?",
-    "answers": [
-      {
-        "text": "Từ tháng 4 đến tháng 10 năm 2025",
-        "correct": true
-      },
-      {
-        "text": "Từ tháng 1 đến tháng 6 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 7 đến tháng 12 năm 2025",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 3 đến tháng 9 năm 2024",
-        "correct": false
-      },
-      {
-        "text": "Từ tháng 5 đến tháng 10 năm 2023",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "4 cơ chế gây ung thư của rượu bia",
     "content": "Rượu bia có thể gây ung thư thông qua bốn cơ chế chính: làm tổn thương DNA, gây viêm nhiễm, rối loạn hormone và hỗ trợ hấp thụ các chất gây ung thư khác. Theo nghiên cứu, ngay cả việc tiêu thụ một lượng nhỏ rượu cũng có thể làm tăng nguy cơ ung thư, đặc biệt là ung thư vú do sự gia tăng nồng độ estrogen. Cựu Tổng Y sĩ Mỹ đã nhấn mạnh mối liên hệ này và kêu gọi dán nhãn cảnh báo trên các sản phẩm có cồn.",
     "link": "https://vnexpress.net/4-co-che-gay-ung-thu-cua-ruou-bia-4865332.html",
@@ -1096,6 +1096,33 @@
       },
       {
         "text": "Chỉ gây nghiện và không gây ung thư",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Trang trí lễ cưới bằng 400 chiếc bánh đặc sản và rau củ quả",
+    "content": "Lễ cưới của Lê Hồng Phước và Hồ Trần Anh Thư tại Bình Định đã gây ấn tượng với trang trí độc đáo bằng 400 chiếc bánh đặc sản và 200kg rau củ quả, thể hiện tình yêu quê hương. Họ sử dụng những giỏ tre để đựng các lễ vật như nem chả, rượu Bàu Đá và bánh truyền thống, tạo nên không khí ấm cúng và gần gũi. Cặp đôi mong muốn kể lại câu chuyện quê hương qua lễ cưới của mình, và những hình ảnh về đám cưới đã thu hút sự chú ý mạnh mẽ trên mạng xã hội.",
+    "link": "https://vnexpress.net/trang-tri-le-cuoi-bang-400-chiec-banh-dac-san-va-rau-cu-qua-4865376.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Lễ cưới của Lê Hồng Phước được trang trí bằng gì?",
+    "answers": [
+      {
+        "text": "400 chiếc bánh đặc sản và rau củ quả",
+        "correct": true
+      },
+      {
+        "text": "1000 chiếc bánh mì",
+        "correct": false
+      },
+      {
+        "text": "500 hoa tươi",
+        "correct": false
+      },
+      {
+        "text": "300 chai rượu",
         "correct": false
       }
     ]
@@ -1213,37 +1240,6 @@
     ]
   },
   {
-    "title": "Honda Rebel 300 E-Clutch mới giá 4.700 USD",
-    "content": "Honda vừa ra mắt mẫu xe Rebel 300 E-Clutch mới tại triển lãm Bangkok Motor Show 2025. Đây là mẫu xe 300 phân khối đầu tiên trên thế giới trang bị ly hợp điện tử E-Clutch, trước đây chỉ có ở dòng 650 phân khối. Rebel 300 có động cơ xi-lanh đơn 286 phân khối, hộp số 6 cấp và trọng lượng 170 kg, nhắm đến khách hàng lần đầu sử dụng xe phân khối lớn. Giá bán của xe là 4.700 USD.",
-    "link": "https://vnexpress.net/honda-rebel-300-e-clutch-moi-gia-4-700-usd-4864980.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Honda Rebel 300 E-Clutch mới có giá bao nhiêu?",
-    "answers": [
-      {
-        "text": "4.700 USD",
-        "correct": true
-      },
-      {
-        "text": "3.500 USD",
-        "correct": false
-      },
-      {
-        "text": "5.000 USD",
-        "correct": false
-      },
-      {
-        "text": "6.000 USD",
-        "correct": false
-      },
-      {
-        "text": "4.000 USD",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe gầm cao cỡ B Trung Quốc khuấy động thị trường Việt",
     "content": "Xe gầm cao cỡ B từ Trung Quốc như Geely Coolray, Omoda C5 và MG ZS đang tạo ra sự cạnh tranh mạnh mẽ trên thị trường Việt Nam. Giá bán của những mẫu xe này khá tương đồng, với mức khởi điểm từ hơn 530 triệu đồng, thu hút sự quan tâm từ người tiêu dùng. Dù vẫn đối mặt với tâm lý ưa chuộng thương hiệu Nhật, Hàn, xe Trung Quốc đang dần thu hút khách hàng trẻ và những người có ngân sách hạn chế. Các thương hiệu này cũng có kế hoạch dài hạn để phát triển sản xuất trong nước nhằm tăng sức cạnh tranh.",
     "link": "https://vnexpress.net/xe-gam-cao-co-b-trung-quoc-khuay-dong-thi-truong-viet-4865116.html",
@@ -1270,6 +1266,37 @@
       },
       {
         "text": "Honda HR-V",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Honda Rebel 300 E-Clutch mới giá 4.700 USD",
+    "content": "Honda vừa ra mắt mẫu xe Rebel 300 E-Clutch mới tại triển lãm Bangkok Motor Show 2025. Đây là mẫu xe 300 phân khối đầu tiên trên thế giới trang bị ly hợp điện tử E-Clutch, trước đây chỉ có ở dòng 650 phân khối. Rebel 300 có động cơ xi-lanh đơn 286 phân khối, hộp số 6 cấp và trọng lượng 170 kg, nhắm đến khách hàng lần đầu sử dụng xe phân khối lớn. Giá bán của xe là 4.700 USD.",
+    "link": "https://vnexpress.net/honda-rebel-300-e-clutch-moi-gia-4-700-usd-4864980.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Honda Rebel 300 E-Clutch mới có giá bao nhiêu?",
+    "answers": [
+      {
+        "text": "4.700 USD",
+        "correct": true
+      },
+      {
+        "text": "3.500 USD",
+        "correct": false
+      },
+      {
+        "text": "5.000 USD",
+        "correct": false
+      },
+      {
+        "text": "6.000 USD",
+        "correct": false
+      },
+      {
+        "text": "4.000 USD",
         "correct": false
       }
     ]
@@ -1754,33 +1781,6 @@
     ]
   },
   {
-    "title": "Màu ráy tai thế nào là bình thường?",
-    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
-    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Màu ráy tai bình thường là gì?",
-    "answers": [
-      {
-        "text": "Vàng và hơi dính",
-        "correct": true
-      },
-      {
-        "text": "Trắng và khô",
-        "correct": false
-      },
-      {
-        "text": "Đen và có mùi",
-        "correct": false
-      },
-      {
-        "text": "Đỏ và lỏng",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vợ cầu thủ Quang Hải sở hữu loạt túi hàng hiệu Hermès, Dior đắt giá",
     "content": "Vợ cầu thủ Quang Hải, Chu Thanh Huyền, nổi bật với bộ sưu tập túi xách hàng hiệu đến từ các thương hiệu nổi tiếng như Hermès và Dior. Cô là một doanh nhân thành công trong lĩnh vực mỹ phẩm trực tuyến và thường xuyên chia sẻ về cuộc sống xa hoa của mình trên mạng xã hội. Bộ sưu tập của cô bao gồm những mẫu túi đắt giá như Hermès Birkin, Hermès Picotin, và Mini Lady Dior, thể hiện gu thời trang tinh tế và đẳng cấp của một người phụ nữ hiện đại.",
     "link": "https://dantri.com.vn/giai-tri/vo-cau-thu-quang-hai-so-huu-loat-tui-hang-hieu-hermes-dior-dat-gia-20250323231704019.htm",
@@ -1803,6 +1803,33 @@
       },
       {
         "text": "Louis Vuitton và Versace",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Màu ráy tai thế nào là bình thường?",
+    "content": "Ráy tai là một chất tự nhiên được sản xuất từ tế bào chết, mồ hôi và bụi bẩn trong ống tai. Màu sắc của ráy tai bình thường thường là vàng và hơi dính, không có mùi. Nếu ráy tai có màu sắc khác như xanh hoặc có mùi hôi, đó có thể là dấu hiệu của viêm nhiễm. Để duy trì sức khỏe tai, không cần phải lấy ráy tai hàng ngày, và nếu có vấn đề như ngứa hay đau, nên đến bác sĩ để kiểm tra.",
+    "link": "https://vnexpress.net/mau-ray-tai-the-nao-la-binh-thuong-4865292.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Màu ráy tai bình thường là gì?",
+    "answers": [
+      {
+        "text": "Vàng và hơi dính",
+        "correct": true
+      },
+      {
+        "text": "Trắng và khô",
+        "correct": false
+      },
+      {
+        "text": "Đen và có mùi",
+        "correct": false
+      },
+      {
+        "text": "Đỏ và lỏng",
         "correct": false
       }
     ]
@@ -2009,33 +2036,6 @@
     ]
   },
   {
-    "title": "Thai phụ uống cacao được không?",
-    "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
-    "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Thai phụ có nên uống cacao không?",
-    "answers": [
-      {
-        "text": "Có, nếu uống với liều lượng vừa phải.",
-        "correct": true
-      },
-      {
-        "text": "Không, cacao không tốt cho thai phụ.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ nên uống cacao vào buổi tối.",
-        "correct": false
-      },
-      {
-        "text": "Cacao có thể gây hại cho thai nhi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu ấn 30 năm Toyota có mặt Việt Nam",
     "content": "Toyota Việt Nam đã đánh dấu 30 năm hoạt động với việc xuất xưởng chiếc xe thứ 700.000 và tổ chức các hoạt động an toàn giao thông cho cộng đồng. Trong 30 năm qua, hãng đã có nhiều đóng góp cho kinh tế - xã hội, đồng thời nâng cao ý thức giao thông cho thế hệ trẻ thông qua các chương trình giáo dục. Các mẫu xe mới của Toyota được cải tiến với công nghệ an toàn tiên tiến, hướng tới việc giảm thiểu rủi ro giao thông cho người dùng. Hãng cũng đã đầu tư hơn 31 triệu USD vào các hoạt động trách nhiệm xã hội tại Việt Nam.",
     "link": "https://vnexpress.net/dau-an-30-nam-toyota-co-mat-viet-nam-4865138.html",
@@ -2058,6 +2058,33 @@
       },
       {
         "text": "Tăng cường quảng cáo sản phẩm mới.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thai phụ uống cacao được không?",
+    "content": "Phụ nữ mang thai có thể uống cacao với liều lượng vừa phải. Cacao mang lại nhiều lợi ích như ổn định tâm trạng, tăng cường miễn dịch và tốt cho hệ tiêu hóa. Chất theobromine trong cacao còn giúp giảm nguy cơ tiền sản giật và các biến chứng cho thai nhi. Tuy nhiên, thai phụ cần chú ý không tiêu thụ quá 200 mg caffeine mỗi ngày để tránh nguy cơ sảy thai.",
+    "link": "https://vnexpress.net/thai-phu-uong-cacao-duoc-khong-4865277.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Thai phụ có nên uống cacao không?",
+    "answers": [
+      {
+        "text": "Có, nếu uống với liều lượng vừa phải.",
+        "correct": true
+      },
+      {
+        "text": "Không, cacao không tốt cho thai phụ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ nên uống cacao vào buổi tối.",
+        "correct": false
+      },
+      {
+        "text": "Cacao có thể gây hại cho thai nhi.",
         "correct": false
       }
     ]
@@ -5323,37 +5350,6 @@
       },
       {
         "text": "Làm việc theo cách truyền thống như trước đây.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Quy chế tuyển sinh 2025: Quá nhiều tổ hợp xét tuyển, có đáng ngại?",
-    "content": "Quy chế tuyển sinh năm 2025 do Bộ GD&ĐT ban hành đã bỏ giới hạn số lượng tổ hợp xét tuyển, cho phép các trường đại học tự do lựa chọn tổ hợp môn để thu hút thí sinh. Mặc dù điều này tạo ra cơ hội cho nhiều thí sinh với thế mạnh khác nhau, nhưng cũng gây lo ngại về tính đồng đều trong chất lượng đầu vào. Các tổ hợp xét tuyển cần phản ánh đúng năng lực yêu cầu của ngành học, đặc biệt với những ngành cần kiến thức nền tảng vững.",
-    "link": "https://dantri.com.vn/giao-duc/quy-che-tuyen-sinh-2025-qua-nhieu-to-hop-xet-tuyen-co-dang-ngai-20250324083624420.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Quy chế tuyển sinh năm 2025 có điểm gì mới so với trước đây?",
-    "answers": [
-      {
-        "text": "Bỏ giới hạn số lượng tổ hợp xét tuyển",
-        "correct": true
-      },
-      {
-        "text": "Giới hạn số lượng tổ hợp xét tuyển",
-        "correct": false
-      },
-      {
-        "text": "Không thay đổi gì",
-        "correct": false
-      },
-      {
-        "text": "Thí sinh phải thi thêm môn mới",
-        "correct": false
-      },
-      {
-        "text": "Chỉ xét tuyển theo học bạ",
         "correct": false
       }
     ]
